# plprql

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  PGRX_UPGRADE_DEBUG.md  README.md  plprql.control
.github/docker/: Dockerfile.debian  run-docker.sh
.github/workflows/: ci.yml  install.yml  package.yml  test.yml
docker/: plprql.Dockerfile
plprql/: Cargo.toml  plprql.control
plprql-tests/: Cargo.toml  plprql_tests.control
plprql-tests/sql/: starwars.sql
plprql-tests/src/: lib.rs  tests.rs
plprql/src/: anydatum.rs  call.rs  err.rs  fun.rs  lib.rs  plprql.rs  spi.rs  srf.rs
scripts/: install.sh
src/: anydatum.rs  call.rs  err.rs  fun.rs  lib.rs  plprql.rs  row.rs
