[package]
name = "plprql"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
pgrx = { git = "https://github.com/pgcentralfoundation/pgrx.git", branch = "develop" }  # Most recent is "=0.10.2", but need pg_proc which is not yet released
prql-compiler = { version = "0.9.2", features = ["postgres"] }
prql-compiler-macros = { version = "0.9.2" }
thiserror = "1.0.48"
sqlparser = {version = "0.38.0", features = ["visitor"] }

[dev-dependencies]
pgrx-tests = { git = "https://github.com/pgcentralfoundation/pgrx.git", branch = "develop" }  # "=0.10.2"

[profile.dev]
panic = "unwind"
debug = true

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
