[package]
name = "plprql_tests"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
pgrx = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"

[dev-dependencies]
pgrx-tests = { workspace = true }
