[package]
name = "plprql"
version = "0.1.0"
edition = "2021"
description = "A procedural language PostgreSQL extension for PRQL"
authors = ["Kasper Marstal <kaspermarstal@gmail.com>"]
homepage = "https://github.com/kaspermarstal/plprql"
repository = "https://github.com/kaspermarstal/plprql"
readme = "../README.md"
categories = ["database"]
keywords = ["sql", "prql", "postgresql", "extension", "pgrx"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
pgrx = { version = "=0.11.4" }
prqlc = { version = "0.11.3", features = ["postgres"] }
thiserror = "1.0.60"

[dev-dependencies]
pgrx-tests = "=0.11.4"
