[package]
name = "plprql"
version = "1.0.0"
edition = "2021"
description = "A procedural language PostgreSQL extension for PRQL"
authors = ["Kasper Marstal <kaspermarstal@gmail.com>"]
homepage = "https://github.com/kaspermarstal/plprql"
repository = "https://github.com/kaspermarstal/plprql"
readme = "../README.md"
categories = ["database"]
keywords = ["sql", "prql", "postgresql", "extension", "pgrx"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_plprql"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = { workspace = true }
prqlc = { version = "0.13.5", features = ["postgres"] }
thiserror = "2.0.17"

[dev-dependencies]
pgrx-tests = { workspace = true }
